# needle

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  get_llvm.sh
cmake/: FindClang.cmake  M32ToolChain.cmake
doc/: Design.md  Logging.txt
examples/: CMakeLists.txt  Common.mk.in
examples/inputs/164.gzip/: input.combined
examples/inputs/456.hmmer/: bombesin.hmm.new  leng100.hmm  nph3.hmm
examples/inputs/bodytrack/sequenceB_4/: BodyShapeParameters.txt  InitialPose.txt  PoseParameters.txt  poses.txt
examples/inputs/bodytrack/sequenceB_4/CALIB/: Camera1.cal  Camera2.cal  Camera3.cal  Camera4.cal
examples/inputs/perfect-suite-v1.0/suite/pa1/input/: LICENSE
examples/scripts/: braid.py  path.py
examples/workloads/: Makefile  Rules.mk
examples/workloads/164.gzip/: Makefile
examples/workloads/179.art/: Makefile
examples/workloads/183.equake/: Makefile
examples/workloads/401.bzip2/: Makefile
examples/workloads/444.namd/: Makefile
examples/workloads/456.hmmer/: Makefile
examples/workloads/458.sjeng/: Makefile
examples/workloads/470.lbm/: Makefile
examples/workloads/blackscholes/: Makefile
examples/workloads/bodytrack/: Makefile
examples/workloads/dwt53/: Makefile
examples/workloads/example/: Makefile
examples/workloads/fft-2d/: Makefile
examples/x86_64/3.8/example/: a.out  example.bc  example.c
examples/x86_64/3.8/lib/: m.bc
examples/x86_64/3.8/parsec/: blackscholes.bc  bodytrack.bc
examples/x86_64/3.8/perfect/: dwt53.bc  fft-2d.bc
examples/x86_64/3.8/spec2000/: 164.gzip.bc  179.art.bc  183.equake.bc
examples/x86_64/3.8/spec2006/: 401.bzip2.bc  444.namd.bc  456.hmmer.bc  458.sjeng.bc  470.lbm.bc
examples/x86_64/4.0/lib/: m.bc
examples/x86_64/4.0/spec2006/: 401.bzip2.bc  444.namd.bc  456.hmmer.bc  458.sjeng.bc  470.lbm.bc
include/: AliasEdgeWriter.h  AllInliner.h  AltCFG.h  Common.h  DilworthDecomposition.h  EPPDecode.h  EPPEncode.h  EPPProfile.h  GraphGrok.h  InstruMem.h  LoopConverter.h  MicroWorkloadExtract.h  Namer.h  NeedleOutliner.h  Simplify.h  Statistics.h  Superblocks.h  epprt.h
lib/: CMakeLists.txt
lib/InstruMem/: CMakeLists.txt  InstruMem.cpp  InstruMem.h  runtime.cpp
lib/aew/: AliasEdgeWriter.cpp  CMakeLists.txt
lib/bitcode/: CMakeLists.txt  README  helpers.c  undo.c
lib/common/: BranchTaxonomy.cpp  CMakeLists.txt  Common.cpp  Helpers.cpp  Statistics.cpp
lib/count/: CMakeLists.txt  Count.cpp  Makefile
lib/epp/: AltCFG.cpp  CMakeLists.txt  EPPDecode.cpp  EPPEncode.cpp  EPPProfile.cpp  RuntimeAgg.cpp  RuntimeRLE.cpp
lib/epp-inst/: AltCFG.cpp  CMakeLists.txt  EPPDecode.cpp  EPPEncode.cpp  EPPProfile.cpp
lib/epp-rt/: CMakeLists.txt  Runtime.cpp  Runtime32.cpp  Runtime64.cpp  RuntimeAgg.cpp  RuntimeRLE.cpp
lib/grok/: CMakeLists.txt  GraphGrok.cpp
lib/inliner/: Inliner.cpp
lib/loop/: CMakeLists.txt  LoopConverter.cpp
lib/mw/: CMakeLists.txt  MicroWorkloadExtract.cpp  MicroWorkloadHelper.cpp
lib/namer/: Namer.cpp
lib/needle/: CMakeLists.txt  MicroWorkloadExtract.cpp  MicroWorkloadHelper.cpp  NeedleHelper.cpp  NeedleOutliner.cpp
lib/sb/: CMakeLists.txt  InnermostLoops.cpp  Superblocks.cpp
lib/simplify/: Simplify.cpp
lib/stats/: BranchTaxonomy.cpp  CMakeLists.txt  Statistics.cpp
scripts/: dependencies.sh  run-tests.sh
support/: log_reader.c
test/: 01.bc  run-tests.sh  test  test.epp.bc  test.epp.ll
test/gold/: 1.gold  2.gold  3.gold  4.gold  5.gold  6.gold  7.gold
test/simple/: simple.c  test.sh
test/src/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
test/stage/: .gitignore  buffer.c  buffer.cpp  buffer.reg.cpp  buffer.s  struct.c
test/stage/bp/: command  epp-sequences.txt.bak
tools/: CMakeLists.txt
tools/epp/: CMakeLists.txt  config.h.in  main.cpp
tools/ifc/: CMakeLists.txt  ifconv
tools/mead/: CMakeLists.txt  mead
tools/mwe/: CMakeLists.txt  main.cpp
tools/needle/: CMakeLists.txt  main.cpp
tools/pasha/: CMakeLists.txt  main.cpp
tools/pip/: CMakeLists.txt  main.cpp  predict.py  predict5.py  prediction.cpp
tools/sbe/: CMakeLists.txt  main.cpp
