add_subdirectory(epp-inst)
add_subdirectory(epp-rt)
add_subdirectory(grok)
add_subdirectory(mw)
add_subdirectory(inliner)
add_subdirectory(namer)
add_subdirectory(common)
add_subdirectory(sb)
add_subdirectory(count)
add_subdirectory(simplify)
add_subdirectory(InstruMem)
add_subdirectory(bitcode)
add_subdirectory(stats)
